fixed footer background not showing

--- a/styles/globalstyles.css
+++ b/styles/globalstyles.css
@@ -34,7 +34,7 @@ footer {
    display: inline-block;
    width: 99%;
    margin-top: 50px;
-   background-image: url("images/footimg.jpg");
+   background-image: url("../images/footimg.jpg");
    background-size: cover;
    background-position: center;
 }
